compiler/testData/asJava/lightClasses/lightClasses/compilationErrors/ActualTypeAlias.kt
// p.ActualTypeAliasKt
package p

actual typealias B = List<Int>